test/negative/feature_finalfields.java

  public class feature_finalfields {
    public feature_finalfields() {}
    public final int x = 42;
  }

